@@ -1,2 +1,6 @@
 # ptcc
 Repositório para controlar as versões do PTCC
+
+
+## como rodar:
+    adicionar --enable-preview 
